# Mini-Google-Map-Algorithm

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile   Main.cpp  README.md  graph.cpp  how HEAD:CMakeLists.txt  nixpacks.toml  nodes.csv  package-lock.json  parse.cpp  path_cordinates.csv  railway.toml  temp.cpp  tempCodeRunnerFile.cpp  traversal.cpp  weightedgraph.cpp
frontend/mini-google-maps-frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/mini-google-maps-frontend/src/: App.jsx  index.css  main.jsx
frontend/mini-google-maps-frontend/src/components/: MapView.jsx  RouteBox.jsx  SearchBar.jsx  Sidebar.jsx  ThemeToggle.jsx
frontend/mini-google-maps-frontend/src/utils/: leafletIconFix.js
include/: Algo.h  Graph.h  Navigation.h  Node.h  crow.h  kdtree.h  parsing.h
practice/: dijkstra.cpp  graph.cpp  instruction.txt  path_cordinates.csv  practice1.py  practice2.py  pratice.py  shortest_path_map.html
src/: Algo.cpp  Graph.cpp  Navigation.cpp  Node.cpp  kdtree.cpp  parsing.cpp
